--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                         <img id="boxImage" src="images/indexImg1.png" alt="">
                     </div>
                     <div class="article" id="boxUrl">
-                        <h2 id="boxTitle"> <!-- 智慧城市整体解决方案 --></h2>
-                        <div class="arc_content" id="node"><div id="boxDesc"><!-- 以“一库一平台多应用”为核心理念，建立时空信息大数据，构建时空信息云平台，开发各类智慧应用，服务于涉及包括国家测绘地理信息局、住房和城乡建设部等政府部门的数字城市、智慧城市项目建设，以及除国土、房产、测绘外的其他行业的地理信息系统为主，其他信息系统为辅的软件项目建设，助力于中国政府的数字城市与智慧城市建设。 --></div></div>
+                        <h2 id="boxTitle"> 智慧城市整体解决方案</h2>
+                        <div class="arc_content" id="node"><div id="boxDesc">以“一库一平台多应用”为核心理念，建立时空信息大数据，构建时空信息云平台，开发各类智慧应用，服务于涉及包括国家测绘地理信息局、住房和城乡建设部等政府部门的数字城市、智慧城市项目建设，以及除国土、房产、测绘外的其他行业的地理信息系统为主，其他信息系统为辅的软件项目建设，助力于中国政府的数字城市与智慧城市建设。</div></div>
                     </div>
                 </div>
             </article>
@@ -139,18 +139,18 @@
                     </div>
                     <div class="box-img" style="margin-top: 25px;" id="newsBox">
                         <img id="newsImg" src="" alt="">
-                        <p class="box-itemName" id="newsTitle"><!-- 数字望城地理空间框架建设项目通过验收 --></p>
+                        <p class="box-itemName" id="newsTitle">数字望城地理空间框架建设项目通过验收</p>
                     </div>
                 </div>
                 <div class="fl box">
                     <span class="news-more" type="companyNews">更多</span>
                     <ul style="margin-top: 60px;" id="navNewsList">
-                        <!-- <li>杨震澎参与国家骨杨震澎参与国家骨干高职院校建设项目验干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li> -->
+                        <li>新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一<span>08-10</span></li>
+                        <li>新闻一<span>08-10</span></li>
+                        <li>新闻一<span>08-10</span></li>
+                        <li>新闻一<span>08-10</span></li>
+                        <li>新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一<span>08-10</span></li>
+                        <li>新闻一<span>08-10</span></li>
                     </ul>
                 </div>
                 <div class="fl box">
@@ -160,12 +160,12 @@
                     </div>
                     <span class="news-more" type="industryNews">更多</span>
                     <ul style="margin-top: 17px;" id="navIndNewsList">
-                        <!-- <li>杨震澎参与国家骨杨震澎参与国家骨干高职院校建设项目验干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li>
-                        <li>杨震澎参与国家骨干高职院校建设项目验<span>09-25</span></li> -->
+                        <li>动态一动态一动态一动态一动态一动态一动态一动态一<span>08-10</span></li>
+                        <li>动态一<span>08-10</span></li>
+                        <li>动态一<span>08-10</span></li>
+                        <li>动态一<span>08-10</span></li>
+                        <li>动态一<span>08-10</span></li>
+                        <li>动态一<span>08-10</span></li>
                     </ul>
                 </div>
             </div>
