--- a/details.html
+++ b/details.html
@@ -55,38 +55,34 @@
 					</div>
 					<div class="news-article">
 
-						<p align="center" class="MsoNormal text-cont">
-							<span style="font-family:宋体;"><span style="font-size:10.5pt;">
-								诚信为本&nbsp;&nbsp;服务至上&nbsp;&nbsp;合作共赢
-							</span></span>
+						<p class="news-title second-title">
+							诚信为本&nbsp;&nbsp;服务至上&nbsp;&nbsp;合作共赢
 						</p>
-						<p align="center" class="MsoNormal text-cont">
-							<span style="font-family:宋体;"><span style="font-size:10.5pt;">
-								团结奋进&nbsp;&nbsp;顽强拼搏&nbsp;&nbsp;开拓创新
-							</span></span>
+						<p class="news-title second-title">
+							团结奋进&nbsp;&nbsp;顽强拼搏&nbsp;&nbsp;开拓创新
 						</p>
 						<br>
-						<p align="center" class="MsoNormal text-cont">
+						<p class="MsoNormal text-cont">
 							<span style="font-family:宋体;"><span style="font-size:10.5pt;">广西华遥空间信息科技有限公司位于南宁市青秀区建政路1号地矿局大院。公司拥有广西测绘地理信息局颁发的乙级测绘资质。</span></span>
 						</p>
 						<br>
-						<p align="center" class="MsoNormal text-cont">
-							<span style="font-family:宋体;"><span style="font-size:10.5pt;">公司主营大地测量、测绘摄影、摄影测量与遥感、地理信息系统工程、工程测量、不动产测绘、地图编制、土地规划设计，<br>测绘的技术研发、技术转让、技术服务、技术咨询，三维摄影与立体建模服务，计算机软硬件技术开发，计算机软件开发等。</span>
+						<p class="MsoNormal text-cont">
+							<span style="font-family:宋体;"><span style="font-size:10.5pt;">公司主营大地测量、测绘摄影、摄影测量与遥感、地理信息系统工程、工程测量、不动产测绘、地图编制、土地规划设计，测绘的技术研发、技术转让、技术服务、技术咨询，三维摄影与立体建模服务，计算机软硬件技术开发，计算机软件开发等。</span>
 							</span>
 						</p>
 						<br>
-						<p align="center" class="MsoNormal text-cont">
-							<span style="font-family:宋体;"><span style="font-size:10.5pt;">公司拥有先进的测绘技术装备，软、硬件配套设施，包括全球卫星定位系统测量设备（GNSS）、全站仪、精密水准仪、计算机工作站、服务器等。<br>配置了Inpho、SuperMap、CASS、AutoCAD、ArcGIS等尖端行业软件。</span>
+						<p class="MsoNormal text-cont">
+							<span style="font-family:宋体;"><span style="font-size:10.5pt;">公司拥有先进的测绘技术装备，软、硬件配套设施，包括全球卫星定位系统测量设备（GNSS）、全站仪、精密水准仪、计算机工作站、服务器等。配置了Inpho、SuperMap、CASS、AutoCAD、ArcGIS等尖端行业软件。</span>
 							</span>
 						</p>
 						<br>
-						<p align="center" class="MsoNormal text-cont">
-							<span style="font-family:宋体;"><span style="font-size:10.5pt;">我公司具有健全的质量管理体系，制定了完善的技术操作规范和严格的质量控制标准，建立二级检查、一级验收制度为核心的质量管理办法，<br>以及各部门分工协作的高效率的项目管理系统。</span>
+						<p class="MsoNormal text-cont">
+							<span style="font-family:宋体;"><span style="font-size:10.5pt;">我公司具有健全的质量管理体系，制定了完善的技术操作规范和严格的质量控制标准，建立二级检查、一级验收制度为核心的质量管理办法，以及各部门分工协作的高效率的项目管理系统。</span>
 							</span>
 						</p>
 						<br>
-						<p align="center" class="MsoNormal text-cont">
-							<span style="font-family:宋体;"><span style="font-size:10.5pt;">我公司将会在竞争激烈的市场中，始终坚持 “诚信为本、服务至上、合作共赢” 的服务宗旨，始终坚持“团结奋进、顽强拼搏、开拓创新”的企业精神<br>，竭诚为广大新老客户地理信息行业的用户提供最专业、最优质的服务。</span>
+						<p class="MsoNormal text-cont">
+							<span style="font-family:宋体;"><span style="font-size:10.5pt;">我公司将会在竞争激烈的市场中，始终坚持 “诚信为本、服务至上、合作共赢” 的服务宗旨，始终坚持“团结奋进、顽强拼搏、开拓创新”的企业精神，竭诚为广大新老客户地理信息行业的用户提供最专业、最优质的服务。</span>
 							</span>
 						</p>
 						<br>
