添加封面图片

--- a/main.html
+++ b/main.html
@@ -12,7 +12,12 @@
 <body>
 <div class="content">
     <div class="bg-img"></div>
-    <ul class="service fix">
+    <div id="banner1" style="overflow: hidden; position: relative; height: 532px;">
+        <div class="pic" data-index="" style="display: block; position: absolute; left: 0; top: 0px;">
+            <img src="uploadfiles/201721091533banner.png" alt="">
+        </div>
+    </div>
+    <!-- <ul class="service fix">
         <li>
             <img src="images/serve1.png">
             <p>数据采集</p>
@@ -38,7 +43,7 @@
             <p>行业应用</p>
             <span class="layer"></span>
         </li>
-    </ul>
+    </ul> -->
     <article class="fix">
         <ul class="nav-item fix fl" id="boxList">
         </ul>
