产品页更改

--- a/products.html
+++ b/products.html
@@ -13,32 +13,40 @@
             <img>
         </div>
         <div class="content" id="Products">
-            <p class="product_head">最热产品</p>
+            <p class="product_head">产品介绍</p>
             <div id="hotProList">
-            	
-            </div>
-            <div class="fix products">
-                <div class="fl">
-                    <img src="images/productImg1.png" alt="">
+                <div class="fix products">
+                    <div class="fl">
+                        <img src="images/proxy_products/Scenes.png" alt="">
+                    </div>
+                    <div class="fr">
+                        <h2>无限界三维实景建模软件</h2>
+                        <div class="products_content">无限界三维实景建模软件（Infinite3D-Real Scenes）：该软件能够对地形地貌、建筑群落、城市街景等大范围真实场景进行快速精确实景三维建模。支持各类倾斜摄影数据处理，同时支持单镜头航空或地面图像处理。</div>
+                    </div>
                 </div>
-                <div class="fr">
-                    <h2>iData数据工厂</h2>
-                    <div class="products_content">南方iData数据工厂是广东南方数码科技股份有限公司结合近20年来在测绘和GIS领域软件开发的经验，自主研发的新一代测绘数据生产平台。为用户提供从数据采集、数据质检、分发，到数据更新、生产管理的一整套测绘数据生产解决方案。</div>
-                    <button>了解更多</button>
+                <div class="fix products">
+                    <div class="fl">
+                        <img src="images/proxy_products/photoOrtho.png" alt="">
+                    </div>
+                    <div class="fr">
+                        <h2>无限界航空影像全自动快速拼图系统</h2>
+                        <div class="products_content">无限界航空影像全自动快速拼图系统（photoOrtho）：photoOrtho是目前国际国内自动化程度最高、时效性最强的航空影像快速拼图系统，可迅速获取航空影像正射拼图、快速检查数据采集质量与完整性，量测与非量测类数码相机都能处理。</div>
+                        <!--<button>了解更多</button>-->
+                    </div>
                 </div>
-            </div>
-            <div class="fix products">
-                <div class="fl">
-                    <img src="images/productImg1.png" alt="">
-                </div>
-                <div class="fr">
-                    <h2>iData数据工厂</h2>
-                    <div class="products_content">南方iData数据工厂是广东南方数码科技股份有限公司结合近20年来在测绘和GIS领域软件开发的经验，自主研发的新一代测绘数据生产平台。为用户提供从数据采集、数据质检、分发，到数据更新、生产管理的一整套测绘数据生产解决方案。</div>
-                    <button>了解更多</button>
+                <div class="fix products">
+                    <div class="fl">
+                        <img src="images/proxy_products/Object.png" alt="">
+                    </div>
+                    <div class="fr">
+                        <h2>无限界3D文物自动建模系统</h2>
+                        <div class="products_content">无限界3D文物自动建模系统（Infinite3D–Real Objects）：该软件能够非常方便地对表面纹理较为丰富、结构相对简单的所有文物进行快速3D建模，是目前世界上自动化程度最高的基于图像3D文物建模成套设备。</div>
+                        <!--<button>了解更多</button>-->
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="fix footmore">
+        <!--<div class="fix footmore">
             <section>
                 <h1 class="more">更多产品</h1>
                	<div id="proList">
@@ -77,11 +85,11 @@
                		    <a href="#">智慧城市整体解决方案</a>
                		    <a href="#">智慧城市整体解决方案</a>
                		    <a href="#">智慧城市整体解决方案</a>
-               		</div> -->
+               		</div> &ndash;&gt;
                	</div>
                 
             </section>
-        </div>
+        </div>-->
         <div class="footer">
             <div class="footer_center">
                 <div class="footer_top">
