--- a/products.html
+++ b/products.html
@@ -44,6 +44,15 @@
                         <!--<button>了解更多</button>-->
                     </div>
                 </div>
+                <div class="fix products">
+                    <div class="fl">
+                    </div>
+                    <div class="fr">
+                        <h2></h2>
+                        <div class="products_content">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!--<div class="fix footmore">
