--- a/solution.html
+++ b/solution.html
@@ -9,45 +9,64 @@
 	<link rel="stylesheet" href="styles/client.css">
 </head>
 <body>
-
-	<div class="content" id="solution">
-		<p class="product_head">最热解决方案</p>
-		<div id="hotProList">
-
-		</div>
-		<div class="fix products">
-			<div class="fl">
-				<img src="images/productImg1.png" alt="">
-			</div>
-			<div class="fr">
-				<h2>不动产登记整体解决方案</h2>
-				<div class="products_content">南方数码不动产统一登记信息管理平台结合南方数码在测绘、国土、房产等行业多年信息化经验积累，遵循国土资源部《不动产登记暂行条例》及各项不动产相关标准，以“地 ”“房”“农”“林”“海”不动产登记数据为核心，业务工作流为枢纽，集不动产测绘、权籍管理、登记审批、档案管理、交换共享、监管分析于一体构建。系统采用灵活可拆建的构造模式，适应各地不动产建设所需。</div>
-				<button>了解更多</button>
-			</div>
-		</div>
-		<div class="fix products">
-			<div class="fl">
-				<img src="images/productImg1.png" alt="">
-			</div>
-			<div class="fr">
-				<h2>不动产登记整体解决方案</h2>
-				<div class="products_content">南方数码不动产统一登记信息管理平台结合南方数码在测绘、国土、房产等行业多年信息化经验积累，遵循国土资源部《不动产登记暂行条例》及各项不动产相关标准，以“地 ”“房”“农”“林”“海”不动产登记数据为核心，业务工作流为枢纽，集不动产测绘、权籍管理、登记审批、档案管理、交换共享、监管分析于一体构建。系统采用灵活可拆建的构造模式，适应各地不动产建设所需。</div>
-				<button>了解更多</button>
-			</div>
-		</div>
+	<div class="head-banner imgfangDaYiCiAnmt">
+		<img>
 	</div>
-	<div class="fix footmore">
-		<section>
-			<h1>更多解决方案</h1>
-			<a href="#">智慧城市整体解决方案</a>
-			<a href="#">智慧城市整体解决方案</a>
-			<a href="#">智慧城市整体解决方案</a>
-			<a href="#">智慧城市整体解决方案</a>
-			<a href="#">智慧城市整体解决方案</a>
-			<a href="#">智慧城市整体解决方案</a>
-			<a href="#">智慧城市整体解决方案</a>
-			<div id="proList"></div>
-		</section>
+	<div class="content" id="Solution">
+		<p class="product_head">解决方案</p>
+		<div id="hotProList">
+			<div class="fix products">
+				<div class="fl">
+					<img src="images/solution/DEM.jpg" alt="">
+				</div>
+				<div class="fr">
+					<h2>DEM(Digital Elevation Model)</h2>
+					<div class="products_content">数字高程模型（Digital Elevation Model，缩写DEM）是一定范围内规则格网点的平面坐标（X，Y）及其高程（Z）的数据集，它主要是描述区域地貌形态的空间分布，是通过等高线或相似立体模型进行数据采集（包括采样和量测），然后进行数据内插而形成的。</div>
+				</div>
+			</div>
+			<div class="fix products">
+				<div class="fl">
+					<img src="images/solution/DOM.png" alt="">
+				</div>
+				<div class="fr">
+					<h2>DOM（Digital Orthophoto Map）</h2>
+					<div class="products_content">数字正射影像图（Digital Orthophoto Map，缩写DOM）是利用DEM对经过扫描处理的数字化航空像片或遥感影像（单色或彩色），经逐像元进行辐射改正、微分纠正和镶嵌，并按规定图幅范围裁剪生成的形象数据，带有公里格网、图廓（内、外）整饰和注记的平面图。
+						包含高清卫片、航片（精度可达3cm）等，也可队标志性建筑制作DOM。
+					</div>
+				</div>
+			</div>
+			<div class="fix products">
+				<div class="fl">
+					<img src="images/solution/DLG.jpg" alt="">
+				</div>
+				<div class="fr">
+					<h2>DLG（Digital Line Graphic，数字线划地图）</h2>
+					<div class="products_content">DLG是与现有线划基本一致的各地图要素的矢量数据集，且保存了各要素间的空间关系信息和相关的属性信息，是4D产品的一种。我公司主要制作大比例尺DLG，包括1:500、1:1000、1：2000等。
+					</div>
+				</div>
+			</div>
+			<div class="fix products">
+				<div class="fl">
+					<img src="images/solution/3dmodel.jpg" alt="">
+				</div>
+				<div class="fr">
+					<h2>三维模型</h2>
+					<div class="products_content">某露天采矿场三维模型：三维GIS可以对整个城市的三维立体空间进行统一描述，并充分准确地集成表达地下的地质、管线、构筑物，地上的土地、交通、建筑、植被，以及室内的设施、房产、人口等，形成与现实世界一致的三维立体空间框架，并以其开放性、可量测性和可挖掘性一并成为了信息化服务的基本要求，三维地图也因此成为人们跟空间信息交互的基本方式和各种门户网站信息服务的基本内容。
+						随着摄影测量技术的发展，倾斜摄影测量自动建模技术已趋近成熟，该技术是一项革命性建模技术，它的出现大大减少了人工成本和建模时间，提高建模的真实感，加速了三维GIS技术的发展。我公司利用在航空摄影测量方面的技术优势，在倾斜摄影测量自动建模方面取得重要突破，目前已有多项成功案例。
+					</div>
+					<!--<button>了解更多</button>-->
+				</div>
+			</div>
+			<div class="fix products">
+				<div class="fl">
+                </div>
+                <div class="fr">
+                    <h2></h2>
+                    <div class="products_content">
+                    </div>
+                </div>
+			</div>
+		</div>
 	</div>
         
 	<div class="footer">
@@ -88,7 +107,6 @@
 				<p>电话：0771-2867671  传真：020-85529456</p>
 			</span>
 
-
 					<div class="right_Qrcode">
 						<span class="Qrimg"><img src="images/Qrcode_two.png"></span>
 						<p class="Qrinfor">【GIS圈】</p>
@@ -98,8 +116,6 @@
 						<p class="Qrinfor">【微信公众号】</p>
 					</div>
 				</div>
-
-
 			</div>
 			<div class="footer_bottom">
 				<a>copyright © 2016-2018 广西华遥空间信息科技有限公司</a>
@@ -107,8 +123,6 @@
 		</div>
 	</div>
 </div>
-
-
 	<script src="scripts/lib/jquery.min.1.11.1.js"></script>
 	<script src="scripts/lib/plugins.js"></script>
 	<script src="scripts/scroll.js"></script>
