主页图片轮换

--- a/main.html
+++ b/main.html
@@ -10,55 +10,51 @@
     <link rel="stylesheet" href="styles/client.css">
 </head>
 <body>
-<div class="content">
-    <div class="bg-img"></div>
-    <div id="banner1" style="overflow: hidden; position: relative; height: 532px;">
-        <div class="pic" data-index="" style="display: block; position: absolute; left: 0; top: 0px;">
-            <img src="uploadfiles/201721091533banner.png" alt="">
-        </div>
+<div id="banner1" style="overflow: hidden; position: relative; height: 532px;">
+    <div class="pic" data-index="" style="display: block; position: absolute; left: 0; top: 0px;">
+        <img src="uploadfiles/201721091533banner.png" alt="">
     </div>
-    <!-- <ul class="service fix">
+</div>
+<div class="content" id="Main">
+    <div class="bg-img"></div>
+     <!--<ul class="service fix">
         <li>
             <img src="images/serve1.png">
-            <p>数据采集</p>
+            <p>三维模型</p>
             <span class="layer"></span>
         </li>
         <li>
             <img src="images/serve2.png">
-            <p>数据处理</p>
+            <p>飞行平台</p>
             <span class="layer"></span>
         </li>
         <li>
             <img src="images/serve3.png">
-            <p>数据加工</p>
+            <p>倾斜摄影测量</p>
             <span class="layer"></span>
         </li>
         <li>
             <img src="images/serve4.png">
-            <p>平台搭建</p>
+            <p>基础测绘</p>
             <span class="layer"></span>
         </li>
-        <li>
-            <img src="images/serve5.png">
-            <p>行业应用</p>
-            <span class="layer"></span>
-        </li>
-    </ul> -->
+    </ul>-->
+
     <article class="fix">
         <ul class="nav-item fix fl" id="boxList">
         </ul>
         <div class="fr">
             <div class="article-img">
-                <img id="boxImage" src="images/indexImg1.png" alt="">
+                <img id="boxImage" src="images/model/3d-building.jpg" alt="">
             </div>
             <div class="article" id="boxUrl">
-                <h2 id="boxTitle"> 智慧城市整体解决方案</h2>
-                <div class="arc_content" id="node"><div id="boxDesc">以“一库一平台多应用”为核心理念，建立时空信息大数据，构建时空信息云平台，开发各类智慧应用，服务于涉及包括国家测绘地理信息局、住房和城乡建设部等政府部门的数字城市、智慧城市项目建设，以及除国土、房产、测绘外的其他行业的地理信息系统为主，其他信息系统为辅的软件项目建设，助力于中国政府的数字城市与智慧城市建设。</div></div>
+                <h2 id="boxTitle"> 楼盘三维模型</h2>
+                <div class="arc_content" id="node"><div id="boxDesc">三维GIS可以对整个城市的三维立体空间进行统一描述，并充分准确地集成表达地下的地质、管线、构筑物，地上的土地、交通、建筑、植被，以及室内的设施、房产、人口等，形成与现实世界一致的三维立体空间框架，并以其开放性、可量测性和可挖掘性一并成为了信息化服务的基本要求，三维地图也因此成为人们跟空间信息交互的基本方式和各种门户网站信息服务的基本内容。</div></div>
             </div>
         </div>
     </article>
 
-    <div class="newbox fix" id="news">
+    <!--<div class="newbox fix" id="news">
         <div class="fl box">
             <div class="news-head" type="companyNews">
                 <p>公司新闻</p>
@@ -95,39 +91,39 @@
                 <li>动态一<span>08-10</span></li>
             </ul>
         </div>
-    </div>
-
-    <div class="footer">
-        <div class="footer_center">
-            <div class="footer_top">
-                <div class="left_list">
-                    <ul>
-                        <li id="aboutUs">关于我们</li>
-                        <li id="details"><a>企业简介</a></li>
-                        <li><a href="aboutUs_details.html?type=companyProfile">资质荣誉</a></li>
-                        <li><a href="aboutUs_news.html?type=honors">企业文化</a></li>
-                        <li><a href="aboutUs_details.html?type=development">发展历程</a></li>
-                        <li><a href="aboutUs_details.html?type=investor">投资者关系</a></li>
-                        <li><a href="aboutUs_details.html?type=contactUs">联系我们</a></a></li>
-                    </ul>
-                    <ul>
-                        <li>技术服务</li>
-                        <li><a>全国网点</a></li>
-                        <li><a>在线反馈</a></li>
-                        <li><a>运维中心</a></li>
-                        <li><a>常见问题</a></li>
-                        <li><a>软件下载</a></li>
-                        <li><a>其他下载</a></li>
-                    </ul>
-                    <ul>
-                        <li>加入我们</li>
-                        <li><a>员工发展体系</a></li>
-                        <li><a>校园招聘</a></li>
-                        <li><a>社会招聘</a></li>
-                        <li><a>精彩生活</a></li>
-                    </ul>
-                </div>
-                <div class="right_list">
+    </div>-->
+</div>
+<div class="footer">
+    <div class="footer_center">
+        <div class="footer_top">
+            <div class="left_list">
+                <ul>
+                    <li id="aboutUs">关于我们</li>
+                    <li id="details"><a>企业简介</a></li>
+                    <li><a href="aboutUs_details.html?type=companyProfile">资质荣誉</a></li>
+                    <li><a href="aboutUs_news.html?type=honors">企业文化</a></li>
+                    <li><a href="aboutUs_details.html?type=development">发展历程</a></li>
+                    <li><a href="aboutUs_details.html?type=investor">投资者关系</a></li>
+                    <li><a href="aboutUs_details.html?type=contactUs">联系我们</a></a></li>
+                </ul>
+                <ul>
+                    <li>技术服务</li>
+                    <li><a>全国网点</a></li>
+                    <li><a>在线反馈</a></li>
+                    <li><a>运维中心</a></li>
+                    <li><a>常见问题</a></li>
+                    <li><a>软件下载</a></li>
+                    <li><a>其他下载</a></li>
+                </ul>
+                <ul>
+                    <li>加入我们</li>
+                    <li><a>员工发展体系</a></li>
+                    <li><a>校园招聘</a></li>
+                    <li><a>社会招聘</a></li>
+                    <li><a>精彩生活</a></li>
+                </ul>
+            </div>
+            <div class="right_list">
 
 					<span class="right_infor">
 						<p class="address">地址：广西省南宁市良庆区五象大道440号金谷山庄北二里4-2号 </p>
@@ -136,21 +132,20 @@
 					</span>
 
 
-                    <div class="right_Qrcode">
-                        <span class="Qrimg"><img src="images/Qrcode_two.png"></span>
-                        <p class="Qrinfor">【GIS圈】</p>
-                    </div>
-                    <div class="right_Qrcode">
-                        <span class="Qrimg"><img src="images/Qrcode_one.png"></span>
-                        <p class="Qrinfor">【微信公众号】</p>
-                    </div>
+                <div class="right_Qrcode">
+                    <span class="Qrimg"><img src="images/Qrcode_two.png"></span>
+                    <p class="Qrinfor">【GIS圈】</p>
                 </div>
+                <div class="right_Qrcode">
+                    <span class="Qrimg"><img src="images/Qrcode_one.png"></span>
+                    <p class="Qrinfor">【微信公众号】</p>
+                </div>
+            </div>
 
 
-            </div>
-            <div class="footer_bottom">
-                <a>copyright © 2016-2018 广西华遥空间信息科技有限公司</a>
-            </div>
+        </div>
+        <div class="footer_bottom">
+            <a>copyright © 2016-2018 广西华遥空间信息科技有限公司</a>
         </div>
     </div>
 </div>
@@ -158,10 +153,84 @@
 <script src="scripts/lib/plugins.js"></script>
 <script src="scripts/scroll.js"></script>
 <script>
+
+    $(function () {
+        // 根据boxList数据生成li
+        for (var i = 0; i < boxList.length; i++) {
+            var item = boxList[i];
+            var li = ['<li>',
+                '    <a>',
+                '        <i class="item-icon" style="background-image: url(' + imageFolder + item.iconDefault + ')"></i>',
+                '        <p>'+ item.boxTitle +'</p> ',
+                '    </a>',
+                '</li>'
+            ].join("");
+            $('#boxList').append(li);
+        }
+
+        // 绑定鼠标悬停，鼠标进入和离开事件
+        $("#boxList li").hover(function () {
+            var index = $(this).index();
+            $(this).find('.item-icon').css('background-image','url(\'uploadfiles/' + boxList[index].iconDisplay + '\')');
+            $(".article-img img").attr("src", "images/model/" + boxList[index].boxImage);
+            $("#boxTitle").html(boxList[index].boxTitle);
+            $("#boxDesc").html(boxList[index].boxDesc);
+
+        }).mouseenter(function () {
+            var index = $(this).index();
+            $(this).find('.item-icon').css('background-image','url(\'uploadfiles/' + boxList[index].iconDisplay + '\')');
+        }).mouseleave(function () {
+            var index = $(this).index();
+            $(this).find('.item-icon').css('background-image','url(\'uploadfiles/' + boxList[index].iconDefault + '\')');
+        });
+    });
+
     $(".left_list li").click(function () {
         var value = $(this).attr("id");
         parent.vm.main = value + ".html";
     });
+
+
+    var boxList = [
+        {
+            "boxTitle": "三维模型",
+            "boxDesc": "三维GIS可以对整个城市的三维立体空间进行统一描述，并充分准确地集成表达地下的地质、管线、构筑物，地上的土地、交通、建筑、植被，以及室内的设施、房产、人口等，形成与现实世界一致的三维立体空间框架，并以其开放性、可量测性和可挖掘性一并成为了信息化服务的基本要求，三维地图也因此成为人们跟空间信息交互的基本方式和各种门户网站信息服务的基本内容。",
+            "boxImage": "3d-building.jpg",
+            "iconDefault": "201728957552.png",
+            "iconDisplay": "20172895755h2.png"
+        }
+        ,{
+            "boxTitle": "飞行平台",
+            "boxDesc": "公司拥有自主研发的华遥G-1型汽油动力固定翼无人机、maker one系列电动固定翼无人机、华遥S系列多旋翼无人机，也可租赁欧直H125直升机或罗宾逊R44直升机搭载大型航摄仪。",
+            "boxImage": "H125.jpg",
+            "iconDefault": "201728101258.png",
+            "iconDisplay": "20172810125h8.png"
+        }
+        ,{
+            "boxTitle": "测量方案",
+            "boxDesc": "利用高分辨率的倾斜摄影，通过惯导和差分GPS辅助，以及地面高精度航控测量，经服务器集群运算，生成地物的三维模型。航片的分辨率达到2.5cm以内时，三维模型的制作精度为5cm以内，利用立体采集技术，打通了基于三维的倾斜摄影与基于二维的矢量数据采集的通道，在三维模型的基础上可采编最大为1:500的DLG（地形图）。",
+            "boxImage": "measure.png",
+            "iconDefault": "201728100163.png",
+            "iconDisplay": "20172810016h3.png"
+        }
+        ,{
+            "boxTitle": "飞行平台",
+            "boxDesc": "公司拥有自主研发的华遥G-1型汽油动力固定翼无人机、maker one系列电动固定翼无人机、华遥S系列多旋翼无人机，也可租赁欧直H125直升机或罗宾逊R44直升机搭载大型航摄仪。",
+            "boxImage": "H125.jpg",
+            "iconDefault": "201728101258.png",
+            "iconDisplay": "20172810125h8.png"
+        }
+        ,{
+            "boxTitle": "基础测绘",
+            "boxDesc": "公司进行地籍测绘和工程测量，农村集体土地所有权确权发证、宅基地使用权确权发证、农村经营承包权确权发证、土地调查、土地变更调查等，承接市政、建筑、道路测绘；地形测绘等。",
+            "boxImage": "base_measure.jpg",
+            "iconDefault": "201728101258.png",
+            "iconDisplay": "20172810125h8.png"
+        }
+    ];
+
+    var imageFolder = "uploadfiles/";
+
 </script>
 </body>
 </html>
