人才招聘，关于我们页面修改

--- a/talent.html
+++ b/talent.html
@@ -10,7 +10,7 @@
 	<div class="page fix talent">
 	
 		<div class="pic">
-                <img src="images/rencai/banner.jpg">
+                <img src="images/join_us.jpg">
         </div>
 		
 		 <div class="content">
@@ -21,115 +21,35 @@
 				  <ul>
 					<li>
 						  <div class="imgBox">
-							  <img src="images/rencai/img01a.jpg">
+							  <img src="images/image01.jpg">
 							  <div class="imgBoxTxt">
-								  <div class="imgBoxTit">全面的职业发展通道</div>
-								  <div>公司为每位员工的发展提供完善的职业通道和任用机制，并允许各发展线之间的交互调整，从 “线” 到 “面” 全方位解决员工的职业发展。</div>
+								  <div class="imgBoxTit">扁平化管理</div>
+								  <div>在这里，员工之间可以畅所欲言，尽情发挥个性创造，公司内部实现无障碍沟通。</div>
 							  </div>							  
 						  </div>						  
 					  </li>
 					  <li>
 						  <div class="imgBox">
-							  <img src="images/rencai/img02a.jpg">
+							  <img src="images/image02.jpg">
 							  <div class="imgBoxTxt">
-								  <div class="imgBoxTit">系统化的发展管理体系</div>
-								  <div>南方数码构建了以“员工发展主线”为中心的人力资源管理体系，为员工在公司的全面发展提供系统化的支持。</div>
+								  <div class="imgBoxTit">施展才华的平台</div>
+								  <div>华遥空间是新兴的创业公司，在这里您可以尽情地施展才华，实现自己的梦想。</div>
 							  </div>
 						  </div>
 					  </li>
 					  <li>
 						  <div class="imgBox">
-							  <img src="images/rencai/img03a.jpg">
+							  <img src="images/image03.jpg">
 							  <div class="imgBoxTxt">
-								  <div class="imgBoxTit">培训支持体系</div>
-								  <div>紧密结合“员工发展主线”，构建满足于工作和员工发展需要的培训体系，为员工在职的各个发展阶段提供规范化、个性化的支持。</div>
+								  <div class="imgBoxTit">技术提升的契机</div>
+								  <div>公司结合员工的职位，为员工提供个性化支持，这里有让人期待的应用系统，为员工技术提升创造很大的空间。</div>
 							  </div>
 						  </div>
 					  </li>
 
 				  </ul>
 			</div>
-
-			<div class="title" style="clear: both">
-				多彩生活
-			</div>
-
-			<div class="image_part_last">
-				<div class="left_img">
-
-				</div>
-				<div class="right_img">
-					<span class="rignt_t"></span>
-					<span class="rignt_B"></span>
-				</div>
-
-			</div>
-
-			<div class="image_part_last" style="margin-top: 20px;margin-bottom: 40px">
-				<div class="left_img" style="background-color: #fff">
-					<ul>
-						<li style="margin-right: 20px"></li>
-						<li></li>
-						<li style="margin-right: 20px;margin-top: 20px"></li>
-						<li style="margin-top: 20px"></li>
-					</ul>
-				</div>
-				<div class="right_img">
-				</div>
-			</div>
-
 		</div>
-		
-		<div style="width:100%;overflow:hidden">
-			<div class="imgGal">
-				 <div class="galBox">
-					<img src="images/rencai/img04.jpg" alt="">
-					<div class="shadeBox"></div>
-					<div class="galTxt">迎春晚会</div>
-				</div>
-
-				<div style="width:570px;float:left;margin-left:10px;">
-					<div class="galBox" style="margin-bottom:10px;">
-						<img src="images/rencai/img05.jpg" alt="">
-						<div class="shadeBox"></div>
-						<div class="galTxt">户外拓展培训</div>
-					</div>
-
-					<div class="galBox" style="margin-right:5px;">
-						<img src="images/rencai/img06.jpg" alt="">
-						<div class="shadeBox"></div>
-						<div class="galTxt">GIS DAY</div>
-					</div>
-
-					<div class="galBox" style="margin-left:5px;">
-						<img src="images/rencai/img07.jpg" alt="">
-						<div class="shadeBox"></div>
-						<div class="galTxt">培训</div>
-					</div>
-				</div>
-
-				<div class="galBox" style="margin-left:10px;">
-					<img src="images/rencai/img08.jpg" alt="">
-					<div class="shadeBox"></div>
-					<div class="galTxt">运动会</div>
-				</div>
-
-				<div style="width:360px;float:left;margin-left:10px;">
-					<div class="galBox" style="margin-bottom:10px;">
-						<img src="images/rencai/img09.jpg" alt="">
-						<div class="shadeBox"></div>
-						<div class="galTxt">部门出游</div>
-					</div>
-
-					<div class="galBox">
-						<img src="images/rencai/img10.jpg" alt="">
-						<div class="shadeBox"></div>
-						<div class="galTxt">野外徒步</div>
-					</div>
-				</div>
-
-			</div>
-		</div>		
 		
 		<div class="content">
 			 <div class="news_tab" style="float:left;">
@@ -137,55 +57,26 @@
 					 校园招聘
 				 </div>
 				 <div class="news_tabBox" id="campusRecruitingList">
-					 <ul>
-						<li>GIS开发工程师</li>
-						 <li>测绘工程师</li>
-						 <li>高级研发工程师</li>
-						 <li>软件测试工程师</li>
-						 <li>解决方案工程师</li>
-						 <li>WEB前端开发工程师</li>
-						 <li>软件实施工程师</li>
-						 <li>UI设计师</li>
-						 <li>数据处理工程师</li>
-						 <li>营销储备干部</li>
-					 </ul>
-					 <div class="getMores"> >了解更多 </div>
+					 本公司长期招聘测绘及相关专业毕业生、项目经理培训生（实习生）；
+					 <br>实习工作内容：工程测量、地籍测绘项目。
+					 <br>
+					 <br>
+					 <br>
+					 <br>
 				 </div>				 
 			 </div>
-
 			 <div class="news_tab" style="float:right;">
 				 <div class="title" style="clear: both">
 					 社会招聘
 				 </div>
 				 <div class="news_tabBox" id="socialRecruitmentList">
-					 <ul>
-						 <li>GIS开发工程师</li>
-						 <li>项目经理</li>
-						 <li>.NET开发工程师</li>
-						 <li>高级软件测试工程师</li>
-						 <li>会计</li>
-						 <li>高级Java开发工程师</li>
-						 <li>人力资源专员/主官</li>
-						 <li>注册会计师</li>
-						 <li>技术支持工程师</li>
-						 <li>大客户销售代表</li>
-					 </ul>
-					 <div class="getMores"> >了解更多 </div>
+					 项目经理：
+					 <br>要求：
+					 <br>　　1、测绘及相关专业本科及以上学历；
+					 <br>　　2、两年以上测绘行业项目经验，可单独带队完成项目；
+					 <br>　　3、工作踏实，吃苦耐劳。
 				 </div>
 			 </div>
-
-			 <div class="title" style="clear: both">
-				 招聘活动
-			 </div>			 
-			 <div id="banner" style="height:340px;width:100%;margin-bottom:55px;">
-				 <div class="pic">
-					 <img src="images/part3.png" href="TalentDetails.html" alt="">
-				 </div>
-				 <div class="pic">
-					 <img src="images/part2.png" href="TalentDetails.html" alt="">
-				 </div>
-			 </div>
-          
 		</div>
 	</div>
 	<div class="footer">
