--- a/main.html
+++ b/main.html
@@ -17,29 +17,6 @@
 </div>
 <div class="content" id="Main">
     <div class="bg-img"></div>
-     <!--<ul class="service fix">
-        <li>
-            <img src="images/serve1.png">
-            <p>三维模型</p>
-            <span class="layer"></span>
-        </li>
-        <li>
-            <img src="images/serve2.png">
-            <p>飞行平台</p>
-            <span class="layer"></span>
-        </li>
-        <li>
-            <img src="images/serve3.png">
-            <p>倾斜摄影测量</p>
-            <span class="layer"></span>
-        </li>
-        <li>
-            <img src="images/serve4.png">
-            <p>基础测绘</p>
-            <span class="layer"></span>
-        </li>
-    </ul>-->
-
     <article class="fix">
         <ul class="nav-item fix fl" id="boxList">
         </ul>
@@ -53,74 +30,22 @@
             </div>
         </div>
     </article>
-
-    <!--<div class="newbox fix" id="news">
-        <div class="fl box">
-            <div class="news-head" type="companyNews">
-                <p>公司新闻</p>
-                <p>Company news</p>
-            </div>
-            <div class="box-img" style="margin-top: 25px;" id="newsBox">
-                <img id="newsImg" src="" alt="">
-                <p class="box-itemName" id="newsTitle">数字望城地理空间框架建设项目通过验收</p>
-            </div>
-        </div>
-        <div class="fl box">
-            <span class="news-more" type="companyNews">更多</span>
-            <ul style="margin-top: 60px;" id="navNewsList">
-                <li>新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一<span>08-10</span></li>
-                <li>新闻一<span>08-10</span></li>
-                <li>新闻一<span>08-10</span></li>
-                <li>新闻一<span>08-10</span></li>
-                <li>新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一<span>08-10</span></li>
-                <li>新闻一<span>08-10</span></li>
-            </ul>
-        </div>
-        <div class="fl box">
-            <div class="news-head" type="industryNews">
-                <p>行业动态</p>
-                <p>Industry News</p>
-            </div>
-            <span class="news-more" type="industryNews">更多</span>
-            <ul style="margin-top: 17px;" id="navIndNewsList">
-                <li>动态一动态一动态一动态一动态一动态一动态一动态一<span>08-10</span></li>
-                <li>动态一<span>08-10</span></li>
-                <li>动态一<span>08-10</span></li>
-                <li>动态一<span>08-10</span></li>
-                <li>动态一<span>08-10</span></li>
-                <li>动态一<span>08-10</span></li>
-            </ul>
-        </div>
-    </div>-->
 </div>
 <div class="footer">
     <div class="footer_center">
         <div class="footer_top">
             <div class="left_list">
                 <ul>
-                    <li id="aboutUs">关于我们</li>
+                    <li>关于我们</li>
                     <li id="details"><a>企业简介</a></li>
-                    <li><a href="aboutUs_details.html?type=companyProfile">资质荣誉</a></li>
-                    <li><a href="aboutUs_news.html?type=honors">企业文化</a></li>
-                    <li><a href="aboutUs_details.html?type=development">发展历程</a></li>
-                    <li><a href="aboutUs_details.html?type=investor">投资者关系</a></li>
-                    <li><a href="aboutUs_details.html?type=contactUs">联系我们</a></a></li>
+                    <li><a href="www.chinaspacex.cn">公司网址</a></li>
                 </ul>
                 <ul>
-                    <li>技术服务</li>
-                    <li><a>全国网点</a></li>
-                    <li><a>在线反馈</a></li>
-                    <li><a>运维中心</a></li>
                     <li><a>常见问题</a></li>
-                    <li><a>软件下载</a></li>
-                    <li><a>其他下载</a></li>
                 </ul>
                 <ul>
                     <li>加入我们</li>
-                    <li><a>员工发展体系</a></li>
-                    <li><a>校园招聘</a></li>
-                    <li><a>社会招聘</a></li>
-                    <li><a>精彩生活</a></li>
+                    <li id="talent"><a>人才招聘</a></li>
                 </ul>
             </div>
             <div class="right_list">
@@ -128,7 +53,8 @@
 					<span class="right_infor">
 						<p class="address">地址：广西省南宁市良庆区五象大道440号金谷山庄北二里4-2号 </p>
                         <br><br>
-						<p>电话：0771-2867671  传真：020-85529456</p>
+						<p>电话：0771-2867671</p>
+                        <p>传真：020-85529456</p>
 					</span>
 
 
