--- a/products.html
+++ b/products.html
@@ -46,6 +46,16 @@
                 </div>
                 <div class="fix products">
                     <div class="fl">
+                        <img src="images/model/H125.jpg" alt="">
+                    </div>
+                    <div class="fr">
+                        <h2>飞行平台</h2>
+                        <div class="products_content">公司拥有自主研发的华遥G-1型汽油动力固定翼无人机、maker one系列电动固定翼无人机、华遥S系列多旋翼无人机，也可租赁欧直H125直升机或罗宾逊R44直升机搭载大型航摄仪。</div>
+                        <!--<button>了解更多</button>-->
+                    </div>
+                </div>
+                <div class="fix products">
+                    <div class="fl">
                     </div>
                     <div class="fr">
                         <h2></h2>
@@ -55,50 +65,6 @@
                 </div>
             </div>
         </div>
-        <!--<div class="fix footmore">
-            <section>
-                <h1 class="more">更多产品</h1>
-               	<div id="proList">
-                		<div class="fl">
-               		    <button>智慧城市</button>
-               		    <a href="#">土地利用规划管理系统</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		</div>
-               		<div class="fl">
-               		    <button>智慧城市</button>
-               		    <a href="#">土地利用规划管理系统</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		</div>
-               		<div class="fl">
-               		    <button>智慧城市</button>
-               		    <a href="#">土地利用规划管理系统</a>
-               		</div>
-               		<div class="fl">
-               		    <button>智慧城市</button>
-               		    <a href="#">土地利用规划管理系统</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		    <a href="#">智慧城市整体解决方案</a>
-               		</div> &ndash;&gt;
-               	</div>
-                
-            </section>
-        </div>-->
         <div class="footer">
             <div class="footer_center">
                 <div class="footer_top">
