更改页面样式，添加图片展示

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,12 +9,12 @@
 <body>
 	<div class="page fix aboutUs">
 		<div class="bannerImg imgfangDaYiCiAnmt">
-			<img src="images/aboutUs_bg.png">
+			<img src="images/blue_bg.jpg">
 	    </div>  
 	<div class="servicesmenu">
 		<div class="servicesmenu_center">
 			<span class="title">
-				<p>关注南方数码</p>
+				<p>关注华遥空间</p>
 			</span>
 			<div class="menu_content">
 				<ul id="nav-to-links">
@@ -85,67 +85,53 @@
 	</div>  
 	</div>
 	<div id="footer">
-	<div class="footer"> 
-		<div class="footer_center">
-			<div class="footer_top">
-				<div class="left_list">
-					<ul>
-						<li>关于我们</li>
-						<li><a>企业简介</a></li>
-						<li><a>资质荣誉</a></li>
-						<li><a>企业文化</a></li>
-						<li><a>发展历程</a></li>
-						<li><a>投资者关系</a></li>
-						<li><a>联系我们</a></a></li>
-					</ul>
-					<ul>
-						<li>技术服务</li>
-						<li><a>全国网点</a></li>
-						<li><a>在线反馈</a></li>
-						<li><a>运维中心</a></li>
-						<li><a>常见问题</a></li>
-						<li><a>软件下载</a></li>
-						<li><a>其他下载</a></li>	
-					</ul>
-					<ul>
-						<li>加入我们</li>
-						<li><a>员工发展体系</a></li>
-						<li><a>校园招聘</a></li>
-						<li><a>社会招聘</a></li>
-						<li><a>精彩生活</a></li>
-					</ul>
-				</div>
-				<div class="right_list">
-
-					<span class="right_infor">
-						<!--<p>服务热线 :</p>
-						<p class="tel">400-606-9090</p>-->
-						<p class="address">地址：广州市天河区科韵路26号测绘大厦四楼 </p>
-						<p>电话：020-23380999  传真：020-85529456</p>
-					</span>
-
-					 
-					<div class="right_Qrcode">
-						<span class="Qrimg"><img src="images/Qrcode_two.png"></span>
-						<p class="Qrinfor">【GIS圈】</p>
+		<div class="footer">
+			<div class="footer_center">
+				<div class="footer_top">
+					<div class="left_list">
+						<ul>
+							<li>关于我们</li>
+							<li id="details"><a>企业简介</a></li>
+							<li id = "main"><a>公司网址</a></li>
+						</ul>
+						<ul>
+							<li>帮助指南</li>
+							<li id="products"><a>产品简介</a></li>
+							<li id = "solution"><a>解决方案</a></li>
+						</ul>
+						<ul>
+							<li>加入我们</li>
+							<li id="talent"><a>人才招聘</a></li>
+						</ul>
 					</div>
-					<div class="right_Qrcode">
-						<span class="Qrimg"><img src="images/Qrcode_one.png"></span>
-						<p class="Qrinfor">【微信公众号】</p>
+					<div class="right_list">
+                <span class="right_infor">
+                    <p class="address">地址：广西省南宁市良庆区五象大道440号金谷山庄北二里4-2号 </p>
+                    <br><br>
+                    <p>电话：0771-2867671</p>
+                    <p>传真：020-85529456</p>
+                </span>
+						<div class="right_Qrcode">
+							<span class="Qrimg"><img src="images/weibo.png"></span>
+							<p class="Qrinfor">【关注微博】</p>
+						</div>
+						<div class="right_Qrcode">
+							<span class="Qrimg"><img src="images/weixin.png"></span>
+							<p class="Qrinfor">【关注微信】</p>
+						</div>
 					</div>
+
+
 				</div>
-
-
-			</div>
-			<div class="footer_bottom">
-				<a>© 2003—2017广东南方数码科技股份有限公司版权所有 粤ICP备12038256号</a>
+				<div class="footer_bottom">
+					<a>copyright © 2016-2018 广西华遥空间信息科技有限公司</a>
+				</div>
 			</div>
 		</div>
-	</div>
 </div>
 
 	<script src="scripts/lib/jquery.min.1.11.1.js"></script>
 	<script src="scripts/lib/plugins.js"></script>
-	<script src="scripts/scroll.js"></script>
+	<script src="scripts/common.js"></script>
 </body>
 </html>
