--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
         <div class="head-banner imgfangDaYiCiAnmt">
             <img>
         </div>
-        <div class="content" id="Products">
+        <div class="content" id="Products_content">
             <p class="product_head">产品介绍</p>
             <div id="hotProList">
                 <div class="fix products">
@@ -71,46 +71,33 @@
                     <div class="left_list">
                         <ul>
                             <li>关于我们</li>
-                            <li><a href="aboutUs_details.html?type=companyProfile">企业简介</a></li>
-                            <li><a href="aboutUs_details.html?type=companyProfile">资质荣誉</a></li>
-                            <li><a href="aboutUs_news.html?type=honors">企业文化</a></li>
-                            <li><a href="aboutUs_details.html?type=development">发展历程</a></li>
-                            <li><a href="aboutUs_details.html?type=investor">投资者关系</a></li>
-                            <li><a href="aboutUs_details.html?type=contactUs">联系我们</a></a></li>
+                            <li id="details"><a>企业简介</a></li>
+                            <li id = "main"><a>公司网址</a></li>
                         </ul>
                         <ul>
-                            <li>技术服务</li>
-                            <li><a>全国网点</a></li>
-                            <li><a>在线反馈</a></li>
-                            <li><a>运维中心</a></li>
-                            <li><a>常见问题</a></li>
-                            <li><a>软件下载</a></li>
-                            <li><a>其他下载</a></li>
+                            <li>帮助指南</li>
+                            <li id="products"><a>产品简介</a></li>
+                            <li id = "solution"><a>解决方案</a></li>
                         </ul>
                         <ul>
                             <li>加入我们</li>
-                            <li><a>员工发展体系</a></li>
-                            <li><a>校园招聘</a></li>
-                            <li><a>社会招聘</a></li>
-                            <li><a>精彩生活</a></li>
+                            <li id="talent"><a>人才招聘</a></li>
                         </ul>
                     </div>
                     <div class="right_list">
-
-					<span class="right_infor">
-						<p class="address">地址：广西省南宁市良庆区五象大道440号金谷山庄北二里4-2号 </p>
-                        <br><br>
-						<p>电话：0771-2867671  传真：020-85529456</p>
-					</span>
-
-
+                <span class="right_infor">
+                    <p class="address">地址：广西省南宁市良庆区五象大道440号金谷山庄北二里4-2号 </p>
+                    <br><br>
+                    <p>电话：0771-2867671</p>
+                    <p>传真：020-85529456</p>
+                </span>
                         <div class="right_Qrcode">
-                            <span class="Qrimg"><img src="images/Qrcode_two.png"></span>
-                            <p class="Qrinfor">【GIS圈】</p>
+                            <span class="Qrimg"><img src="images/weibo.png"></span>
+                            <p class="Qrinfor">【关注微博】</p>
                         </div>
                         <div class="right_Qrcode">
-                            <span class="Qrimg"><img src="images/Qrcode_one.png"></span>
-                            <p class="Qrinfor">【微信公众号】</p>
+                            <span class="Qrimg"><img src="images/weixin.png"></span>
+                            <p class="Qrinfor">【关注微信】</p>
                         </div>
                     </div>
 
@@ -124,6 +111,6 @@
 
         <script src="scripts/lib/jquery.min.1.11.1.js"></script>
         <script src="scripts/lib/plugins.js"></script>
-        <script src="scripts/scroll.js"></script>
+        <script src="scripts/common.js"></script>
     </body>
 </html>
