--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
         <img src="uploadfiles/201721091533banner.png" alt="">
     </div>
 </div>
-<div class="content" id="Main">
+<div class="content" id="Main_content">
     <div class="bg-img"></div>
     <article class="fix">
         <ul class="nav-item fix fl" id="boxList">
@@ -38,10 +38,12 @@
                 <ul>
                     <li>关于我们</li>
                     <li id="details"><a>企业简介</a></li>
-                    <li><a href="www.chinaspacex.cn">公司网址</a></li>
+                    <li id = "main"><a>公司网址</a></li>
                 </ul>
                 <ul>
-                    <li><a>常见问题</a></li>
+                    <li>帮助指南</li>
+                    <li id="products"><a>产品简介</a></li>
+                    <li id = "solution"><a>解决方案</a></li>
                 </ul>
                 <ul>
                     <li>加入我们</li>
@@ -49,22 +51,19 @@
                 </ul>
             </div>
             <div class="right_list">
-
-					<span class="right_infor">
-						<p class="address">地址：广西省南宁市良庆区五象大道440号金谷山庄北二里4-2号 </p>
-                        <br><br>
-						<p>电话：0771-2867671</p>
-                        <p>传真：020-85529456</p>
-					</span>
-
-
+                <span class="right_infor">
+                    <p class="address">地址：广西省南宁市良庆区五象大道440号金谷山庄北二里4-2号 </p>
+                    <br><br>
+                    <p>电话：0771-2867671</p>
+                    <p>传真：020-85529456</p>
+                </span>
                 <div class="right_Qrcode">
-                    <span class="Qrimg"><img src="images/Qrcode_two.png"></span>
-                    <p class="Qrinfor">【GIS圈】</p>
+                    <span class="Qrimg"><img src="images/weibo.png"></span>
+                    <p class="Qrinfor">【关注微博】</p>
                 </div>
                 <div class="right_Qrcode">
-                    <span class="Qrimg"><img src="images/Qrcode_one.png"></span>
-                    <p class="Qrinfor">【微信公众号】</p>
+                    <span class="Qrimg"><img src="images/weixin.png"></span>
+                    <p class="Qrinfor">【关注微信】</p>
                 </div>
             </div>
 
@@ -77,86 +76,7 @@
 </div>
 <script src="scripts/lib/jquery.min.1.11.1.js"></script>
 <script src="scripts/lib/plugins.js"></script>
-<script src="scripts/scroll.js"></script>
-<script>
-
-    $(function () {
-        // 根据boxList数据生成li
-        for (var i = 0; i < boxList.length; i++) {
-            var item = boxList[i];
-            var li = ['<li>',
-                '    <a>',
-                '        <i class="item-icon" style="background-image: url(' + imageFolder + item.iconDefault + ')"></i>',
-                '        <p>'+ item.boxTitle +'</p> ',
-                '    </a>',
-                '</li>'
-            ].join("");
-            $('#boxList').append(li);
-        }
-
-        // 绑定鼠标悬停，鼠标进入和离开事件
-        $("#boxList li").hover(function () {
-            var index = $(this).index();
-            $(this).find('.item-icon').css('background-image','url(\'uploadfiles/' + boxList[index].iconDisplay + '\')');
-            $(".article-img img").attr("src", "images/model/" + boxList[index].boxImage);
-            $("#boxTitle").html(boxList[index].boxTitle);
-            $("#boxDesc").html(boxList[index].boxDesc);
-
-        }).mouseenter(function () {
-            var index = $(this).index();
-            $(this).find('.item-icon').css('background-image','url(\'uploadfiles/' + boxList[index].iconDisplay + '\')');
-        }).mouseleave(function () {
-            var index = $(this).index();
-            $(this).find('.item-icon').css('background-image','url(\'uploadfiles/' + boxList[index].iconDefault + '\')');
-        });
-    });
-
-    $(".left_list li").click(function () {
-        var value = $(this).attr("id");
-        parent.vm.main = value + ".html";
-    });
-
-
-    var boxList = [
-        {
-            "boxTitle": "三维模型",
-            "boxDesc": "三维GIS可以对整个城市的三维立体空间进行统一描述，并充分准确地集成表达地下的地质、管线、构筑物，地上的土地、交通、建筑、植被，以及室内的设施、房产、人口等，形成与现实世界一致的三维立体空间框架，并以其开放性、可量测性和可挖掘性一并成为了信息化服务的基本要求，三维地图也因此成为人们跟空间信息交互的基本方式和各种门户网站信息服务的基本内容。",
-            "boxImage": "3d-building.jpg",
-            "iconDefault": "201728957552.png",
-            "iconDisplay": "20172895755h2.png"
-        }
-        ,{
-            "boxTitle": "飞行平台",
-            "boxDesc": "公司拥有自主研发的华遥G-1型汽油动力固定翼无人机、maker one系列电动固定翼无人机、华遥S系列多旋翼无人机，也可租赁欧直H125直升机或罗宾逊R44直升机搭载大型航摄仪。",
-            "boxImage": "H125.jpg",
-            "iconDefault": "201728101258.png",
-            "iconDisplay": "20172810125h8.png"
-        }
-        ,{
-            "boxTitle": "测量方案",
-            "boxDesc": "利用高分辨率的倾斜摄影，通过惯导和差分GPS辅助，以及地面高精度航控测量，经服务器集群运算，生成地物的三维模型。航片的分辨率达到2.5cm以内时，三维模型的制作精度为5cm以内，利用立体采集技术，打通了基于三维的倾斜摄影与基于二维的矢量数据采集的通道，在三维模型的基础上可采编最大为1:500的DLG（地形图）。",
-            "boxImage": "measure.png",
-            "iconDefault": "201728100163.png",
-            "iconDisplay": "20172810016h3.png"
-        }
-        ,{
-            "boxTitle": "飞行平台",
-            "boxDesc": "公司拥有自主研发的华遥G-1型汽油动力固定翼无人机、maker one系列电动固定翼无人机、华遥S系列多旋翼无人机，也可租赁欧直H125直升机或罗宾逊R44直升机搭载大型航摄仪。",
-            "boxImage": "H125.jpg",
-            "iconDefault": "201728101258.png",
-            "iconDisplay": "20172810125h8.png"
-        }
-        ,{
-            "boxTitle": "基础测绘",
-            "boxDesc": "公司进行地籍测绘和工程测量，农村集体土地所有权确权发证、宅基地使用权确权发证、农村经营承包权确权发证、土地调查、土地变更调查等，承接市政、建筑、道路测绘；地形测绘等。",
-            "boxImage": "base_measure.jpg",
-            "iconDefault": "201728101258.png",
-            "iconDisplay": "20172810125h8.png"
-        }
-    ];
-
-    var imageFolder = "uploadfiles/";
-
-</script>
+<script src="scripts/common.js"></script>
+<script src="scripts/main.js"></script>
 </body>
 </html>
