--- a/main.html
+++ b/main.html
@@ -10,14 +10,80 @@
     <link rel="stylesheet" href="styles/client.css">
 </head>
 <body>
-<div id="banner1" style="overflow: hidden; position: relative; height: 532px;">
+<div id="banner1" style="overflow: hidden; position: relative; height: 480px;">
     <div class="pic" data-index="" style="display: block; position: absolute; left: 0; top: 0px;">
-        <img src="uploadfiles/201721091533banner.png" alt="">
+        <img src="images/main.jpg" alt="">
+    </div>
+    <div class="ban_mation">
+        <p class="ban_mation_p1 c_blue">最专业 最优质</p>
+        <p class="ban_mation_p2 c_blue">华遥空间信息</p>
+        <p class="ban_mation_p3 c_black">用最专业的技术为地理信息行业提供最优质的服务</p>
     </div>
 </div>
-<div class="content" id="Main_content">
+<div class="" id="Main_content">
     <div class="bg-img"></div>
-    <article class="fix">
+    <div class="image_part1" style="display:inline-block;">
+        <ul>
+            <li>
+                <div class="imgBox">
+                    <img src="images/main/3d-building.jpg">
+                    <div class="imgBoxTxt">
+                        <div class="imgBoxTit">三维模型</div>
+                        <div>对整个城市的三维立体空间进行统一描述的三维GIS</div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="imgBox">
+                    <img src="images/main/H125.jpg">
+                    <div class="imgBoxTxt">
+                        <div class="imgBoxTit">飞行平台</div>
+                        <div>公司拥有自主研发的多种无人机，也可租赁欧直H125直升机或罗宾逊R44直升机搭载大型航摄仪。</div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="imgBox">
+                    <img src="images/main/measure.png">
+                    <div class="imgBoxTxt">
+                        <div class="imgBoxTit">测量方案</div>
+                        <div>利用高分辨率的倾斜摄影，生成地物的三维模型。</div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <div style="height: 10px; width: 100%; float: left;"></div>
+        <ul>
+            <li>
+                <div class="imgBox">
+                    <img src="images/main/DLG.jpg">
+                    <div class="imgBoxTxt">
+                        <div class="imgBoxTit">数字地图</div>
+                        <div>DLG是与现有线划基本一致的各地图要素的矢量数据集，且保存了各要素间的空间关系信息和相关的属性信息，是4D产品的一种。</div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="imgBox">
+                    <img src="images/main/base_measure.jpg">
+                    <div class="imgBoxTxt">
+                        <div class="imgBoxTit">基础测绘</div>
+                        <div>公司进行地籍测绘和工程测量，土地调查、土地变更调查等，承接市政、建筑、道路测绘；地形测绘等。</div>
+                    </div>
+                </div>
+            </li>
+            <!--<li>
+                <div class="imgBox">
+                    <img src="images/image03.jpg">
+                    <div class="imgBoxTxt">
+                        <div class="imgBoxTit">技术提升的契机</div>
+                        <div>公司结合员工的职位，为员工提供个性化支持，这里有让人期待的应用系统，为员工技术提升创造很大的空间。</div>
+                    </div>
+                </div>
+            </li>-->
+        </ul>
+    </div>
+   <!-- <article class="fix">
         <ul class="nav-item fix fl" id="boxList">
         </ul>
         <div class="fr">
@@ -29,7 +95,7 @@
                 <div class="arc_content" id="node"><div id="boxDesc">三维GIS可以对整个城市的三维立体空间进行统一描述，并充分准确地集成表达地下的地质、管线、构筑物，地上的土地、交通、建筑、植被，以及室内的设施、房产、人口等，形成与现实世界一致的三维立体空间框架，并以其开放性、可量测性和可挖掘性一并成为了信息化服务的基本要求，三维地图也因此成为人们跟空间信息交互的基本方式和各种门户网站信息服务的基本内容。</div></div>
             </div>
         </div>
-    </article>
+    </article>-->
 </div>
 <div class="footer">
     <div class="footer_center">
