--- a/main.html
+++ b/main.html
@@ -72,15 +72,6 @@
                     </div>
                 </div>
             </li>
-            <!--<li>
-                <div class="imgBox">
-                    <img src="images/image03.jpg">
-                    <div class="imgBoxTxt">
-                        <div class="imgBoxTit">技术提升的契机</div>
-                        <div>公司结合员工的职位，为员工提供个性化支持，这里有让人期待的应用系统，为员工技术提升创造很大的空间。</div>
-                    </div>
-                </div>
-            </li>-->
         </ul>
     </div>
    <!-- <article class="fix">
@@ -96,6 +87,7 @@
             </div>
         </div>
     </article>-->
+    <div style="height: 15px;"></div>
 </div>
 <div class="footer">
     <div class="footer_center">
