--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,81 +9,58 @@
 <body>
 	<div class="page fix aboutUs">
 		<div class="bannerImg imgfangDaYiCiAnmt">
-			<img src="images/blue_bg.jpg">
-	    </div>  
-	<div class="servicesmenu">
-		<div class="servicesmenu_center">
-			<span class="title">
-				<p>关注华遥空间</p>
-			</span>
-			<div class="menu_content">
-				<ul id="nav-to-links">
-					<li>
-					  <div class="item"> 
-						<div class="menu_img item1">
-						</div>
-						<div class="menu_title" type="companyProfile">
-							<p>企业简介</p>
-						</div>
-					 </div>	
-					</li>
-					<li>
-					  <div class="item"> 
-						<div class="menu_img item2">
-						</div>
-						<div class="menu_title" type="honors">
-							<p>资质荣誉</p>
-						</div>
-					  </div>	
-
-					</li>
-					<li>
-					  <div class="item"> 
-						<div class="menu_img item3">
-						</div>
-						<div class="menu_title" type="compnayNews">
-							<p>企业文化</p>
-						</div>
-					  </div>	
-
-					</li>
-					<li>
-					  <div class="item"> 
-						<div class="menu_img item4">
-							<!-- <img src="img/aboutUs/fazhanlicheng.png"> -->
-						</div>
-						<div class="menu_title" type="development">
-							<p>发展历程</p>
-						</div>
-					 </div>	
-
-					</li>
-					<li>
-					  <div class="item"> 
-						<div class="menu_img item5">
-						</div>
-						<div class="menu_title" type="investor">
-							<p>投资者关系</p>
-						</div>
-					  </div>	
-
-					</li>
-					<li>
-					  <div class="item"> 
-						<div class="menu_img item6">
-						</div>
-						<div class="menu_title" type="contactUs">
-							<p>联系我们</p>
-						</div>
-					  </div>	
-
-					</li>
-
-				</ul>
-			</div>
-		</div> 
-	</div>  
+			<img src="images/aboutUs_bg.jpg">
+	    </div>
+		<div class="ban_mation">
+			<p class="ban_mation_p1 c_blue">最专业 最优质</p>
+			<p class="ban_mation_p2 c_blue">华遥空间信息</p>
+			<p class="ban_mation_p3 c_black">用最专业的技术为地理信息行业提供最优质的服务</p>
+		</div>
 	</div>
+
+	<div class="content_box">
+
+		<div id="news-content">
+			<div class="title">
+				<p class='news-title'>企业简介</p>
+			</div>
+			<div class="news-article">
+
+				<p class="news-title second-title">
+					诚信为本&nbsp;&nbsp;服务至上&nbsp;&nbsp;合作共赢
+				</p>
+				<p class="news-title second-title">
+					团结奋进&nbsp;&nbsp;顽强拼搏&nbsp;&nbsp;开拓创新
+				</p>
+				<br>
+				<p class="MsoNormal text-cont">
+					<span style="font-family:宋体;"><span style="font-size:10.5pt;">广西华遥空间信息科技有限公司位于南宁市青秀区建政路1号地矿局大院。公司拥有广西测绘地理信息局颁发的乙级测绘资质。</span></span>
+				</p>
+				<br>
+				<p class="MsoNormal text-cont">
+						<span style="font-family:宋体;"><span style="font-size:10.5pt;">公司主营大地测量、测绘摄影、摄影测量与遥感、地理信息系统工程、工程测量、不动产测绘、地图编制、土地规划设计，测绘的技术研发、技术转让、技术服务、技术咨询，三维摄影与立体建模服务，计算机软硬件技术开发，计算机软件开发等。</span>
+						</span>
+				</p>
+				<br>
+				<p class="MsoNormal text-cont">
+						<span style="font-family:宋体;"><span style="font-size:10.5pt;">公司拥有先进的测绘技术装备，软、硬件配套设施，包括全球卫星定位系统测量设备（GNSS）、全站仪、精密水准仪、计算机工作站、服务器等。配置了Inpho、SuperMap、CASS、AutoCAD、ArcGIS等尖端行业软件。</span>
+						</span>
+				</p>
+				<br>
+				<p class="MsoNormal text-cont">
+						<span style="font-family:宋体;"><span style="font-size:10.5pt;">我公司具有健全的质量管理体系，制定了完善的技术操作规范和严格的质量控制标准，建立二级检查、一级验收制度为核心的质量管理办法，以及各部门分工协作的高效率的项目管理系统。</span>
+						</span>
+				</p>
+				<br>
+				<p class="MsoNormal text-cont">
+						<span style="font-family:宋体;"><span style="font-size:10.5pt;">我公司将会在竞争激烈的市场中，始终坚持 “诚信为本、服务至上、合作共赢” 的服务宗旨，始终坚持“团结奋进、顽强拼搏、开拓创新”的企业精神，竭诚为广大新老客户地理信息行业的用户提供最专业、最优质的服务。</span>
+						</span>
+				</p>
+				<br>
+			</div>
+		</div>
+	</div>
+
 	<div id="footer">
 		<div class="footer">
 			<div class="footer_center">
@@ -120,8 +97,6 @@
 							<p class="Qrinfor">【关注微信】</p>
 						</div>
 					</div>
-
-
 				</div>
 				<div class="footer_bottom">
 					<a>copyright © 2016-2018 广西华遥空间信息科技有限公司</a>
@@ -131,7 +106,6 @@
 </div>
 
 	<script src="scripts/lib/jquery.min.1.11.1.js"></script>
-	<script src="scripts/lib/plugins.js"></script>
 	<script src="scripts/common.js"></script>
 </body>
 </html>
