--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <img src="images/logo.png">
             </span>
             <span class="logo_infor">
-                <p>体验地理信息价值</p>
-                <p>数据 · 软件 · 服务</p>
+                <br>
+                <p>软件平台 · 数据分析 · 产品服务</p>
             </span>
         </div>
         <!-- 导航菜单 -->
@@ -41,7 +41,6 @@
     <script src="scripts/lib/jquery.min.1.11.1.js"></script>
     <script src="scripts/lib/vue.min.js"></script>
     <script src="scripts/lib/router.js"></script>
-    <script src="scripts/lib/plugins.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
